<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_internals"
            android:title="@string/subject_selector"/>

        <item android:id="@+id/nav_internals_attendance"
            android:icon="@drawable/ic_school"
            android:title="@string/internals_and_attendance"/>

    </group>

    <item android:title="@string/explore">
        <menu>


            <group android:checkableBehavior="single">


                <item android:id="@+id/nav_noticeboard"
                    android:icon="@drawable/ic_noticeboard"
                    android:title="@string/notice_board" />

                <item android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback"/>

                <item android:id="@+id/nav_lost_and_found"
                    android:icon="@drawable/ic_lost_and_found"
                    android:title="@string/lost_and_found"/>

            </group>

            <item android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/locate_bus"/>

        </menu>

    </item>

    <item android:title="@string/options">
        <menu>

            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_admin"
                    android:icon="@drawable/ic_admin"
                    android:title="@string/administrative_controls" />

                <item android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"/>

            </group>

        </menu>

    </item>

</menu>