<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_hi"
        android:icon="@drawable/ic_hi"
        android:title="@string/say_hi"/>

    <item android:title="@string/about_us">
        <menu>

            <item android:id="@+id/nav_website"
                android:icon="@drawable/ic_website"
                android:title="@string/website" />
            <item android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact" />
            <item android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/locate"/>

        </menu>

    </item>


</menu>